# autoDocker

./: README.md  core.py  main.py  productReqDoc.md  progress.txt  pyproject.toml
src/autodocker/: __init__.py  core.py  main.py
