[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodocker"
version = "0.1.0"
description = "LLM-powered automatic containerization tool"
dependencies = [
    "litellm",
    "docker",
    "gitpython",
    "rich",
    "colorama",
]

[project.scripts]
autodocker = "autodocker.main:cli_entry"
